--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
   },
   "dependencies": {
     "gatsby": "^2.19.18",
+    "gatsby-image": "^2.4.5",
     "gatsby-plugin-favicon": "^3.1.6",
     "gatsby-plugin-google-analytics": "^2.1.35",
     "gatsby-plugin-react-helmet": "^3.1.22",
     "gatsby-plugin-sass": "^2.1.28",
+    "gatsby-plugin-sharp": "^2.6.9",
+    "gatsby-source-filesystem": "^2.3.8",
     "gatsby-source-instagram": "^0.7.0",
     "node-sass": "^4.14.1",
     "react": "^16.12.0",
