--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gatsby-plugin-sass": "^2.3.2",
     "gatsby-plugin-sharp": "^2.6.9",
     "gatsby-source-filesystem": "^2.3.8",
+    "gatsby-source-instagram": "^0.7.0",
     "gatsby-transformer-sharp": "^2.5.3",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
