--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "date-fns": "^2.14.0",
     "gatsby": "^2.22.9",
     "gatsby-image": "^2.4.5",
     "gatsby-plugin-favicon": "^3.1.6",
