--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "gatsby-plugin-sharp": "^2.6.9",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-filesystem": "^2.3.8",
-    "gatsby-source-instagram": "^0.7.0",
+    "gatsby-source-instagram": "^0.8.0-beta.0",
     "gatsby-transformer-sharp": "^2.5.3",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
