--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gatsby-transformer-sharp": "^2.5.3",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-awesome-reveal": "^3.0.0",
     "react-dom": "^16.13.1",
     "react-helmet": "^5.2.1"
   },
